--- a/hello-world.html
+++ b/hello-world.html
@@ -1,1 +1,2 @@
 <h1> this it sh the heading </h1>
+<p>Welcome to my first website! I am about to embark on the exciting journey of learning how to code. Won't you join me?</p>
