--- a/hello-world.html
+++ b/hello-world.html
@@ -1,2 +1,10 @@
-<h1> this it sh the heading </h1>
-<p>Welcome to my first website! I am about to embark on the exciting journey of learning how to code. Won't you join me?</p>
+<<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <p>This is the first lesson assignment by Moringa school</p>
+  </body>
+</html>
