--- a/hello-world.html
+++ b/hello-world.html
@@ -5,6 +5,7 @@
     <title></title>
   </head>
   <body>
-    <p>This is the first lesson assignment by Moringa school</p>
+    <p>This is the first lesson assignment by Moringa school</p>\
+    <p>this is the second p</p>
   </body>
 </html>
