--- a/bingo.html
+++ b/bingo.html
@@ -7,7 +7,14 @@
   <body>
     <div>
     <p>This is the first lesson assignment by Moringa school</p>
-    <p>this is the second p</p>
+    <p>Here what we will be learning at Moringa p</p>
+    <ol>
+      <li>html</li>
+      <li>csss</li>
+      <li>java</li>
+      <li>Angular</li>
+      <li>django</li>
+    </ol>
     </div>
   </body>
 </html>
