--- a/bingo.html
+++ b/bingo.html
@@ -2,19 +2,26 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>My first Webpage</title>
+    <h2>Written with a little guidance from <em>Moringa School</em></h2>
   </head>
   <body>
+
     <div>
-    <p>This is the first lesson assignment by Moringa school</p>
-    <p>Here what we will be learning at Moringa p</p>
-    <ol>
-      <li>html</li>
-      <li>csss</li>
-      <li>java</li>
-      <li>Angular</li>
-      <li>django</li>
-    </ol>
+      Hello,world
+      <p> welcome to my <em>first page</em></p>
+      <p>Here are things am about to do</p>
+      <ol>
+        <li>HTMl</li>
+        <li>css</li>
+        <li>Javascript</li>
+        <li>And alot more</li>
+      </ol>
+      <p>Check out <a href="http://moringaschool.com/">Moringa School</a>. It's a great place to learn web development skills!</p>
+      <p>Here is a link to my <a href="https://www.youtube.com/watch?v=EL733nvX1Pk">favorite things</a>.</p>
+      <img src="images/elephant.jpg" alt="A photo of an elephant">
+
     </div>
+
   </body>
 </html>
